# RAIM-project

./: README.md  app.py  chatbot.py  forms.py  init_db.py  main.py  models.py  prompt.py  pyproject.toml  requirements.txt
instance/: hospital.db
static/: script.js  style.css
static/css/: custom.css  style.css
static/js/: script.js  validation.js
templates/: admin_dashboard.html  admin_login.html  appointments.html  base.html  calendar_partial.html  form.html  index.html  index_chatbot.html  no_specialist.html  results.html  script.js  stylesheet.css
